refactor: Finalize documentation and remove obsolete code
This commit applies final corrections to the documentation and refactors the project structure.

- **Refine `paper.rst`**:

    - Clarified the description of `chess-ant`'s MCTS instance handling to accurately state that instance variables are reset, not the entire search tree.

    - Added author and date metadata to the paper.

- **Remove Obsolete Directories**:

    - Deleted the legacy `src/mcts_gen/api/` and `src/mcts_gen/cli/` directories, as they are no longer part of the current architecture.

- **Update Dependencies and Translations**:

    - Added `sphinx_rtd_theme` to the `dev` dependencies in `pyproject.toml` to prevent future build errors.

    - Updated all Japanese translation (`.po`) files to reflect the latest documentation changes.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ license = "GPL-3.0-or-later"
 dev = [
     "pytest",
     "sphinx",
-    "sphinx-intl"
+    "sphinx-intl",
+    "sphinx_rtd_theme"
 ]
 shogi = [
     "python-shogi"
