--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,9 @@ shogi = [
 Homepage = "https://github.com/akuroiwa/mcts-gen"
 Documentation = "https://mcts-gen.readthedocs.io/en/latest/"
 Repository = "https://github.com/akuroiwa/mcts-gen.git"
+
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.package-data]
+mcts_gen = ["AGENTS.md"]
