--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ dev = [
 shogi = [
     "python-shogi"
 ]
+chess = [
+    "python-chess"
+]
 
 [project.urls]
 Homepage = "https://github.com/akuroiwa/mcts-gen"
