--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mcts-gen"
-version = "0.0.1"
+version = "0.0.2"
 description = "A generic MCTS framework driven by an external AI agent."
 requires-python = ">=3.8"
 dependencies = [
@@ -16,13 +16,23 @@ authors = [
 ]
 readme = "README.md"
 license = "GPL-3.0-or-later"
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Programming Language :: Python :: 3.12",
+    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+]
 
 [project.optional-dependencies]
 dev = [
     "pytest",
     "sphinx",
     "sphinx-intl",
-    "sphinx_rtd_theme"
+    "sphinx_rtd_theme",
+    "trio",
+    "trio-typing"
 ]
 shogi = [
     "python-shogi"
@@ -36,8 +46,5 @@ Homepage = "https://github.com/akuroiwa/mcts-gen"
 Documentation = "https://mcts-gen.readthedocs.io/en/latest/"
 Repository = "https://github.com/akuroiwa/mcts-gen.git"
 
-[tool.setuptools]
-include-package-data = true
-
-[tool.setuptools.package-data]
-mcts_gen = ["AGENTS.md"]
+# [tool.setuptools]
+# include-package-data = true
