feat(ligand): Implement external molecule source for MCTS-Gen
Implements the feature to allow the LigandMCTSGameState to generate chemical fragments from an external file of molecules (SMILES, SDF, CSV).

This includes:
- : Added 'rdkit' and 'pandas' to the '[ligand]' optional dependency.
- : Modified , added helper functions for file parsing and BRICS fragmentation, and updated  to use the dynamic fragment library.
- : Added new unit tests for initialization, parsing, error handling, and fragmentation.
- Documentation (, ): Updated installation and usage instructions for the new feature.
- : All tasks marked as complete.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,13 +31,18 @@ dev = [
     "sphinx-intl",
     "sphinx_rtd_theme",
     "trio",
-    "trio-typing"
+    "trio-typing",
+    "pandas"
 ]
 shogi = [
     "python-shogi"
 ]
 chess = [
     "python-chess"
+]
+ligand = [
+    "rdkit",
+    "pandas"
 ]
 
 [project.urls]
