feat: Implement rich game state summary for Chess and Shogi
This commit introduces the `get_state_summary` method for both Chess and Shogi game states, fulfilling the `010-add-game-summary` feature.

- **Features:**
  - `ChessGameState` now provides game PGN via `get_state_summary()`.
  - `ShogiGameState` now provides game KIF via `get_state_summary()`.

- **Testing:**
  - New unit tests (`test_chess_mcts_unit.py`, `test_shogi_mcts_unit.py`) have been added to verify the `get_state_summary` functionality.
  - Test files were renamed to avoid collection conflicts.

- **Dependencies:**
  - `mock` library added to `pyproject.toml` as a `dev` optional dependency to resolve test suite issues.

- **Documentation:**
  - `quickstart.po` has been translated to Japanese, and the HTML documentation rebuilt.
  - Feature specification documents under `specs/010-add-game-summary/` are included.

This resolves the original issue of the failing `test_chess_mcts.py` and implements the full `010-add-game-summary` feature.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mcts-gen"
-version = "0.0.2"
+version = "0.0.3"
 description = "A generic MCTS framework driven by an external AI agent."
 requires-python = ">=3.10"
 dependencies = [
@@ -32,7 +32,8 @@ dev = [
     "sphinx_rtd_theme",
     "trio",
     "trio-typing",
-    "pandas"
+    "pandas",
+    "mock"
 ]
 shogi = [
     "python-shogi"
